clusters/beryjuorg-offsite/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50000m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: minio
  namespace: minio
spec:
  ingressClassName: nginx
  rules:
  - host: backup-s3.beryju.org
    http:
      paths:
      - backend:
          service:
            name: minio-service
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
  - host: console.backup-s3.beryju.org
    http:
      paths:
      - backend:
          service:
            name: minio-service
            port:
              number: 9001
        path: /
        pathType: ImplementationSpecific
  - host: '*.backup-s3.beryju.org'
    http:
      paths:
      - backend:
          service:
            name: minio-service
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - backup-s3.beryju.org
    - '*.backup-s3.beryju.org'
    secretName: minio-acme
