clusters/beryjuorg-offsite/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: minio
  name: minio-service
  namespace: minio
spec:
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: http-console
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app.kubernetes.io/name: minio
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beryjuorg-global-minio-offsite
  namespace: minio
spec:
  hosts:
    - minio.offsite.beryjuorg
    - "*.minio.offsite.beryjuorg"
  http:
  - route:
    - destination:
        port:
          number: 9000
        host: minio-service.minio.svc.cluster.local
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: beryjuorg-global-minio-offsite
  namespace: minio
spec:
  hosts:
  - minio.offsite.beryjuorg
  - "*.minio.offsite.beryjuorg"
  ports:
  - number: 9000
    name: http
    protocol: HTTP
  location: MESH_INTERNAL
  resolution: DNS
